--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
        border-right: 1px solid gray;
        width: 100px;
        margin: 0;
-       padding-top: 20px;
+       padding-top: 0;
    }
 
    #grid {
@@ -56,10 +56,23 @@
        }
    }
 
-   #link{
+   #link {
     color: hotpink;
     text-decoration: none;
     font-weight: bold;
    }
 
-  
+   li {
+    margin: 10px;
+   }
+
+   h2{
+    display: inline-block;
+    background: pink;
+    margin-bottom: 0;
+   }
+
+   h3 {
+    margin-top: 20px;
+    margin-bottom: 10px;
+   }
